manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: dstfullncalcapi 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dstfullncalcapi
  template:
    metadata:
      labels:
        app: dstfullncalcapi 
    spec:
      containers:
        - name: dstfullncalcapi 
          image: containerregistry4pd7i.azurecr.io/dstfullncalcapi
          ports:
          - containerPort: 80
