manifests/develop-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "develop.covercrop-ncalc.org"
    secretName: precisionsustainableagccncalcsurfaceapi
  rules:
  - host: "develop.covercrop-ncalc.org"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: precisionsustainableagccncalcsurfaceapi
              port:
                number: 80
