manifests/production-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "covercrop-ncalc.org"
    secretName: ncalc
  rules:
  - host: "covercrop-ncalc.org www.covercrop-ncalc.org"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: precisionsustainableagccncalcsurfaceapi
              port:
                number: 80
        - pathType: Prefix
          path: "/*"
          backend:
            service:
              name: precisionsustainableagccncalcsurfaceapi
              port:
                number: 80
